--- a/.env
+++ b/.env
@@ -4,8 +4,12 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="file:./dev.db"
 NEXT_PUBLIC_API_URL="http://localhost:3000"
+# POSTGRES_PRISMA_URL="postgres://default:jkN4Ynu3RiOv@ep-curly-credit-a4jao029-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
+# POSTGRES_URL_NON_POOLING="postgres://default:jkN4Ynu3RiOv@ep-curly-credit-a4jao029.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+
+#LOCAL ENVIRONMENT
+DATABASE_URL="postgresql://postgres:pass@localhost:5432/abogado"
 
 #NODEMAILER
 SMTP_HOST=solu25.tuwebdns.net
@@ -13,3 +17,11 @@ SMTP_PORT=465
 SMTP_USERNAME=hola@moises-web.cl
 SMTP_PASSWORD="Fender(/)1981"
 REPLY_TO=hola@moises-web.cl
+
+# This was inserted by `prisma init`:
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
