--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
   },
   "dependencies": {
     "@fontsource/inter": "^5.0.16",
-    "@prisma/client": "^5.9.1",
+    "@prisma/client": "^5.10.2",
     "js-cookie": "^3.0.5",
     "next": "14.0.4",
     "nodemailer": "^6.9.11",
+    "pg": "^8.11.3",
     "react": "^18",
+    "react-awesome-reveal": "^4.2.8",
     "react-dom": "^18",
-    "react-icons": "^5.0.1",
-    "sqlite3": "^5.1.7"
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
-    "prisma": "^5.9.1"
+    "prisma": "^5.10.2"
   }
 }
