--- a/.env
+++ b/.env
@@ -18,6 +18,11 @@ SMTP_USERNAME=hola@moises-web.cl
 SMTP_PASSWORD="Fender(/)1981"
 REPLY_TO=hola@moises-web.cl
 
+#CLOUDINARY
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME='diqtyq9j2'
+NEXT_PUBLIC_CLOUDINARY_APIKEY='742472146163577'
+NEXT_PUBLIC_CLOUDINARY_API_SECRET='sXUfqZjiJKKQ1qKpIBY8rl-_WGU'
+
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
 # See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
