nav error fixed

--- a/.env
+++ b/.env
@@ -5,11 +5,11 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 NEXT_PUBLIC_API_URL="http://localhost:3000"
-POSTGRES_PRISMA_URLL="postgres://default:jkN4Ynu3RiOv@ep-curly-credit-a4jao029-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
+# POSTGRES_PRISMA_URLL="postgres://default:jkN4Ynu3RiOv@ep-curly-credit-a4jao029-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
 # POSTGRES_URL_NON_POOLING="postgres://default:jkN4Ynu3RiOv@ep-curly-credit-a4jao029.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
 
 #LOCAL ENVIRONMENT
-# POSTGRES_PRISMA_URL="postgresql://postgres:pass@localhost:5432/abogado"
+DATABASE_URL="postgresql://postgres:pass@localhost:5432/abogado"
 
 #NODEMAILER
 SMTP_HOST=solu25.tuwebdns.net
