--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@fontsource/inter": "^5.0.16",
     "@prisma/client": "^5.10.2",
     "js-cookie": "^3.0.5",
-    "next": "14.0.4",
+    "next": "^14.1.3",
     "next-cloudinary": "^6.3.0",
     "nodemailer": "^6.9.11",
     "pg": "^8.11.3",
