--- a/.env
+++ b/.env
@@ -13,11 +13,11 @@ DATABASE_URL="postgres://default:jkN4Ynu3RiOv@ep-curly-credit-a4jao029-pooler.us
 # DATABASE_URL="postgresql://postgres:pass@localhost:5432/abogado"
 
 #NODEMAILER
-SMTP_HOST=solu25.tuwebdns.net
+SMTP_HOST=mail.orlandorojas.cl
 SMTP_PORT=465
-SMTP_USERNAME=hola@moises-web.cl
-SMTP_PASSWORD="Fender(/)1981"
-REPLY_TO=hola@moises-web.cl
+SMTP_USERNAME=autobot@orlandorojas.cl
+SMTP_PASSWORD=OrlandoRojas
+SEND_TO=abogado@orlandorojas.cl
 
 #CLOUDINARY
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME='diqtyq9j2'
